[package]
name = "cbor-protocol"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>", "Patrick Oppel <patrick.oppel94@gmail.com"]
edition = "2018"

[dependencies]
serde_cbor = "0.10.2"
failure = "0.1.8"
log = { version = "^0.4.0", default-features = false }
hal-stream = { git = "ssh://git@github.com/Cube-OS/hal-stream"}